--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,15 +66,15 @@
 
 		<div class="row-md-8">
 			<div class="col-md-3">
-				<img th:src="@{/img/mithunlogo.jpg}" alt="logo" height="200">
+				<img th:src="@{/img/kishanlogo.jpg.png}" alt="logo" height="200">
 			</div>
 			<div class="col-md-8">
-				<h4 class="text-center">Mithun Technologies - Consultant,
+				<h4 class="text-center">Kishan Technologies - Consultant,
 					Training, Development Center.</h4>
-				<h4 class="text-center">Contact @ +91-8296242028 ,
-					+91-9980923226</h4>
+				<h4 class="text-center">Contact @ +91-8143880161 ,
+					+91-7794937892</h4>
 				<h5 class="text-center">
-					Copyrights 2019 by <a href="http://mithuntechnologies.com/">Mithun
+					Copyrights 2019 by <a href="http://kishantechnologies.com/">Kishan
 						Technologies</a>
 				</h5>
 			</div>
